# catia-v5-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  test_server.py
.github/workflows/: traffic.yml
catia_mcp/: __init__.py  __main__.py  connection.py  paths.py  server.py
catia_mcp/tools/: __init__.py  _geometry.py  assembly.py  contest.py  document.py  drawing.py  export.py  geoset.py  knowledge.py  measurement.py  part_design.py  part_design_advanced.py  saw.py  sketcher.py  surface.py  wheel.py  wireframe.py
docs/: DEPLOYMENT.md  PLAN.md
scripts/: collect_traffic.py  restart_remote_catia_mcp.ps1  smoke_design_table.py  smoke_drawing_bom.py  smoke_drawing_dimensions.py  smoke_drawing_text.py  smoke_item14.py  smoke_slinky.py  smoke_wheel_visibility.py  smoke_zoom_view.py
scripts/fixtures/: design_table_smoke.txt
scripts/windows/: restart_catia_mcp_in_session.ps1
tests/: test_drawing.py  test_knowledge.py  test_part_design_advanced.py  test_saw.py  test_sketcher.py  test_wheel.py
traffic/: badge-clones.json  badge-views.json  clones.csv  clones.json  views.csv  views.json
